# Splider

./: CMakeLists.txt  README.md
Splider/: CMakeLists.txt
Splider/Splider/: Argument.h  BiSpline.h  Builder.h  C2.h  CatmullRom.h  Co.h  Cospline.h  Hermite.h  Lagrange.h  Linspace.h  Mode.h  Multi.h  MultiBuilder.h  MultiSpline.h  Natural.h  Partition.h  Profile.h  Spline.h  SplineBuilder.h
Splider/Splider/mixins/: Builder.h  C2.h  Cubic.h  Hermite.h
Splider/src/lib/: Splider.cpp  Spline.cpp
Splider/tests/src/: BiSpline_test.cpp  C2_test.cpp  Cospline_test.cpp  Lagrange_test.cpp  Natural_test.cpp  Partition_test.cpp  Spline_test.cpp
SpliderRun/: CMakeLists.txt
SpliderRun/SpliderRun/: Demo.h  GslInterp.h
SpliderRun/src/lib/: Demo.cpp
SpliderRun/src/program/: SpliderBenchmark.cpp  SpliderBenchmark2D.cpp  SpliderBiBenchmark.cpp  SpliderSin.cpp  SpliderSin2D.cpp
SpliderRun/tests/src/: SpliderDemo_test.cpp
cmake/doc/: Doxyfile.in  footer.html  header.html
doc/: basics.dox  groups.dox
